<resources>
    <string name="app_name">OnlyOfMy</string>
    <string name="AppName">纸条君App</string>

    <string name="view1topic">首页</string>
    <string name="view2topic">社区</string>
    <string name="view3topic">会员</string>
    <string name="view4topic">小卖部</string>
    <string name="view5topic">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>